--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 db.sqlite3
+.idea/copyloftproject.iml
+.idea/markdown-navigator/
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
+copyloftapp/login/__init__.pyc
+copyloftapp/login/logincheck.pyc
+copyloftapp/migrations/0002_auto_20161209_1718.py
+copyloftapp/migrations/0002_auto_20161209_1718.pyc
+copyloftapp/migrations/0003_auto_20161210_1606.py
+copyloftapp/migrations/0003_auto_20161210_1606.pyc
+copyloftapp/migrations/0004_auto_20161211_0156.py
+copyloftapp/migrations/0004_auto_20161211_0156.pyc
+copyloftapp/migrations/0005_auto_20161211_1927.py
+copyloftapp/migrations/0005_auto_20161211_1927.pyc
+copyloftapp/signup/__init__.pyc
+copyloftapp/signup/inputdetails.pyc
+static/css/signup/
+static/django_facebook/
+static/fonts/
+static/js/signup/
